--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_messaging: ^8.0.0-dev.15
   flutter_local_notifications: ^4.0.1+2
+  workmanager: ^0.4.1
 
 dev_dependencies:
   flutter_test:
