--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,11 +64,8 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
-    // implementation platform('com.google.firebase:firebase-bom:28.3.1')
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')  
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation "com.google.firebase:firebase-auth:17.0.0"
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 }
 
 
