--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   get_mac: ^0.0.1
   flick_video_player:
     path: ./../LocalPackages/flick-video-player
-
+  location: any
 
   video_compress: ^2.1.0
 
@@ -70,7 +70,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  dio: ^3.0.10
   firebase_core: ^0.7.0
   firebase_messaging: ^8.0.0-dev.15
   workmanager: ^0.4.1
