--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   share: ^0.6.5+4
   cached_network_image: ^2.5.0
   flutter_icons: ^1.1.0
+    
   sqflite: ^2.0.0+3
   socket_io_client: ^1.0.0
   video_thumbnail: ^0.3.3
@@ -52,7 +53,7 @@ dependencies:
 
 
   flutter_image_compress: ^1.0.0
-
+  
 
 
 
@@ -76,10 +77,17 @@ dependencies:
   flutter_local_notifications: ^4.0.1+2
   double_back_to_close: ^2.0.0
   shimmer: ^2.0.0
+  
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon/notify_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
