--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,8 @@ android {
     }
 
     lintOptions {
-        disable 'InvalidPackage'
+        checkReleaseBuilds false
+        abortOnError false
     }
 
     defaultConfig {
