--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependencies:
   flutter_local_notifications: ^4.0.1+2
   double_back_to_close: ^2.0.0
   shimmer: ^2.0.0
-  
+  flutter_parsed_text: ^2.2.1
   
 
 dev_dependencies:
