--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_parsed_text: ^2.2.1
   date_format: ^2.0.4
+  device_info_plus: ^0.7.2
   
 
 dev_dependencies:
