comment pagination done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,7 +105,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/reactions/
+    - assets/app_icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
