like, comment, share count

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
 			to determine the Window background behind the Flutter UI.
 			-->
 			<meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme" />
+			<meta-data
+          android:name="com.google.firebase.messaging.default_notification_icon"
+          android:resource="@mipmap/launcher_icon"/>
 			<!--
 			Displays an Android View that continues showing the launch screen
 			Drawable until Flutter paints its first frame, then this splash
